--- a/test2.html
+++ b/test2.html
@@ -1,14 +1,14 @@
-< html >
- < hlava >
- </ head >
- < tělo >
-  < script  src = " https://espruino.github.io/js/puck.js " > </ script >
-  < skript >
-      var  d  =  nové  datum ( ) ;
-      var  n  =  matematika . kolo ( d . getTime ( ) / 1000 ) ;
-      var  puckCommand  =  "setTime ("  +  n  +  ") \ n" ;
-  </ skript >
-   < button  onclick = " Puck.write (puckCommand); " > Nastavit čas </ tlačítko >
-   < button  onclick = " Puck.eval ('new Date (). toString ()', function (x) {console.log (x);}) " > Získat čas </ button >
-   </ tělo >
-</ html >
+<html>
+ <head>
+ </head>
+ <body>
+  <script src="https://espruino.github.io/js/puck.js"></script>
+  <script>
+      var d = new Date();
+      var n = Math.round(d.getTime()/1000);
+      var puckCommand = "setTime(" + n + ")\n";
+  </script>
+   <button onclick="Puck.write(puckCommand);">Set The Time</button>
+   <button onclick="Puck.eval('new Date().toString()',function(x) { console.log(x); })">Get The Time</button>
+   </body>
+</html>
