--- a/test3.html
+++ b/test3.html
@@ -1,3 +1,8 @@
+<html>
+ <head>
+ </head>
+ <body>
+
 <button id="read">Connect with BLE device</button>
 <button id="start" disabled>Start</button>
 <button id="stop" disabled>Stop</button>
@@ -111,3 +116,5 @@
     })
   }
 </script>
+ </body>
+</html>
